--- a/index.html
+++ b/index.html
@@ -8,44 +8,64 @@
   </head>
   <body>
     <div class="container">
-      <div class="search">
-        <input type="text" placeholder="Enter City Name" spellcheck="false">
-        <button>Search Location</button>
+      <div class="weather-section">
+
+        <div class="search-container">
+          <input type="text" class="search-input" placeholder="Enter City Name..." spellcheck="false">
+          <button class="search-button">Search!</button>
+        </div>
+
+        <div class="error-message"></div>
+
+        <div class="weather-display hidden">
+          <div class="weather-main-card">
+            <h2 id="condition">condition</h2>
+            <h1 id="temp">temp</h1>
+            <!-- why location class and id -->
+            <div class="location" id="location">location</div>
+          </div>
+
+            <div class="weather-grid">
+              <div class="weather-cards">
+                <span>Rain</span>
+                <p id="rain-value">5</p>
+              </div>
+              <div class="weather-cards">
+                <span>Wind Speed</span>
+                <p id="wind-speed-value"></p>
+              </div>
+              <div class="weather-cards">
+                <span>Feels Like</span>
+                <p id="feels-like-value"></p>
+              </div>
+              <div class="weather-cards">
+                <span>Sunrise</span>
+                <p id="sunrise-value"></p>
+              </div>
+              <div class="weather-cards">
+                <span>Sunset</span>
+                <p id="sunset-value"></p>
+              </div>
+              <div class="weather-cards">
+                <span>UV Index</span>
+                <p id="uv-index-value"></p>
+              </div>
+            </div>
+        </div>
       </div>
-      <div class="weather">
-        <div class="info-main">
-          <h2 id="condition"></h2>
-          <h1 id="temp"></h1>
-          <h2 id="location"></h2>
+      <div class="care-section">
+        <div class="care-card">
+          <p class="care-reminder" id="care-reminder">
+            Reminders will appear here after a location is identified.
+          </p>
         </div>
-        <div class="info-grid">
-          <div class="weather-cards" id="rain">
-            <span>Rain</span>
-            <p id="rain-value"></p>
-          </div>
-          <div class="weather-cards" id="wind-speed">
-            <span>Wind Speed</span>
-            <p id="wind-speed-value"></p>
-          </div>
-          <div class="weather-cards" id="wind-direction">
-            <span>Wind Direction</span>
-            <p id="wind-direction-value"></p>
-          </div>
-          <div class="weather-cards" id="sunrise">
-            <span>Sunrise</span>
-            <p id="sunrise-value"></p>
-          </div>
-          <div class="weather-cards" id="sunset">
-            <span>Sunset</span>
-            <p id="sunset-value"></p>
-          </div>
-          <div class="weather-cards" id="uv-index">
-            <span>UV Index</span>
-            <p id="uv-index-value"></p>
-          </div>
-        </div>
+
+        <div class="checklist-section">Walking Checklist: </div>
+        <ul class="checklist" id="walking-checklist">
+        </ul>
       </div>
     </div>
+    <!-- module need? -->
     <script type="module" src="main.js"></script>
   </body>
 </html>
