new york default example

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="weather-section">
         <div class="search-container">
-          <input type="text" class="search-input" placeholder="Enter City Name..." spellcheck="false" id="cityInput">
+          <input type="text" class="search-input" placeholder="USE NEW YORK TO SEE EXAMPLE..." spellcheck="false" id="cityInput">
           <button class="search-button" id="searchBtn">Search!</button>
         </div>
 
@@ -53,7 +53,7 @@
       </div>
 
       <div class="checklist-section">
-        <h2 class="checklist-title">Walking Checklist</h2>
+        <h2 class="checklist-title">Dog Walking Checklist</h2>
         <div class="reminder-text" id="reminderText">
           Search for a location to get weather-based reminders.
         </div>
