--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="weather-section">
         <div class="search-container">
-          <input type="text" class="search-input" placeholder="USE NEW YORK TO SEE EXAMPLE..." spellcheck="false" id="cityInput">
+          <input type="text" class="search-input" placeholder="Enter City Name..." spellcheck="false" id="cityInput">
           <button class="search-button" id="searchBtn">Search!</button>
         </div>
 
